Add jdk15 profile for toolchains (#309)
Signed-off-by: Ondrej Dockal <odockal@redhat.com>